--- a/sections/apps.liquid
+++ b/sections/apps.liquid
@@ -1,66 +1,33 @@
-{%- if section.blocks.size > 0 -%}
-  {%- render 'section-spacing-collapsing' -%}
-
-  <style>
-    #shopify-section-{{ section.id }} {
-      {% if section.settings.remove_vertical_spacing %}--section-spacing-block: 0px;{% endif %}
-      {% if section.settings.remove_horizontal_spacing %}--section-spacing-inline: 0px;{% endif %}
-    }
-  </style>
-
-  <div {% render 'section-properties' %}>
-    {%- for block in section.blocks -%}
-      {%- render block -%}
-    {%- endfor -%}
-  </div>
-{%- endif -%}
+<div class="{% if section.settings.include_margins %}page-width{% endif %}">
+  {% if section.settings.display_id %}
+    <copy-button class="section-id-btn button" data-content="#shopify-section-{{ section.id }}" data-success="false">
+      <span class="copy-text">Click to copy section ID</span>
+      <span class="copy-success">ID copied successfully!</span>
+    </copy-button>
+  {% endif %}
+  {%- for block in section.blocks -%}
+    {% render block %}
+  {%- endfor -%}
+</div>
 
 {% schema %}
 {
-  "name": "Apps",
-  "class": "shopify-section--apps",
+  "name": "t:sections.apps.name",
   "tag": "section",
-  "disabled_on": {
-    "groups": ["custom.overlay"]
-  },
+  "class": "section",
   "settings": [
     {
       "type": "checkbox",
-      "id": "full_width",
-      "label": "Full width",
-      "default": true
-    },
-    {
-      "type": "checkbox",
-      "id": "remove_vertical_spacing",
-      "label": "Remove vertical spacing",
+      "id": "display_id",
+      "label": "Display section ID",
+      "info": "ID is used in the Sections group section to merge 2 sections. ID can also be put inside any button link and the button will scroll to this section.",
       "default": false
     },
     {
       "type": "checkbox",
-      "id": "remove_horizontal_spacing",
-      "label": "Remove horizontal spacing",
-      "default": false
-    },
-    {
-      "type": "header",
-      "content": "Colors",
-      "info": "Gradient replaces solid colors when set."
-    },
-    {
-      "type": "color",
-      "id": "background",
-      "label": "Background"
-    },
-    {
-      "type": "color_background",
-      "id": "background_gradient",
-      "label": "Background gradient"
-    },
-    {
-      "type": "color",
-      "id": "text_color",
-      "label": "Text"
+      "id": "include_margins",
+      "default": true,
+      "label": "t:sections.apps.settings.include_margins.label"
     }
   ],
   "blocks": [
@@ -70,7 +37,7 @@
   ],
   "presets": [
     {
-      "name": "Apps"
+      "name": "t:sections.apps.presets.name"
     }
   ]
 }
