--- a/sections/custom-liquid.liquid
+++ b/sections/custom-liquid.liquid
@@ -1,76 +1,123 @@
-{%- if section.settings.liquid != blank -%}
-  {%- render 'section-spacing-collapsing' -%}
+{%- style -%}
+  .section-{{ section.id }}-padding {
+    padding-top: calc({{ section.settings.padding_top }}px * 0.75);
+    padding-bottom: calc({{ section.settings.padding_bottom }}px  * 0.75);
+  }
 
-  <style>
-    #shopify-section-{{ section.id }} {
-      {% if section.settings.remove_vertical_spacing %}--section-spacing-block: 0px;{% endif %}
-      {% if section.settings.remove_horizontal_spacing %}--section-spacing-inline: 0px;{% endif %}
+  @media screen and (min-width: 750px) {
+    .section-{{ section.id }}-padding {
+      padding-top: {{ section.settings.padding_top }}px;
+      padding-bottom: {{ section.settings.padding_bottom }}px;
     }
-  </style>
-
-  <div {% render 'section-properties' %}>
-    {{ section.settings.liquid }}
+  }
+{%- endstyle -%}
+<div class="color-{{ section.settings.color_scheme }} gradient content-for-grouping {{ section.settings.visibility }}">
+  {% if section.settings.display_id %}
+    <copy-button class='section-id-btn button' data-content="#shopify-section-{{ section.id }}" data-success="false">
+      <span class="copy-text">Click to copy section ID</span>
+      <span class="copy-success">ID copied successfully!</span>
+    </copy-button>
+  {% endif %}
+  <div class="section-{{ section.id }}-padding">
+    {{ section.settings.custom_liquid }}
   </div>
-{%- endif -%}
+</div>
 
 {% schema %}
 {
-  "name": "Custom Liquid",
-  "class": "shopify-section--custom-liquid",
+  "name": "t:sections.custom-liquid.name",
   "tag": "section",
-  "disabled_on": {
-    "groups": ["custom.overlay"]
-  },
+  "class": "section",
   "settings": [
     {
       "type": "checkbox",
-      "id": "full_width",
-      "label": "Full width",
-      "default": true
-    },
-    {
-      "type": "checkbox",
-      "id": "remove_vertical_spacing",
-      "label": "Remove vertical spacing",
+      "id": "display_id",
+      "label": "Display section ID",
+      "info": "ID is used in the Sections group section to merge 2 sections. ID can also be put inside any button link and the button will scroll to this section.",
       "default": false
     },
     {
-      "type": "checkbox",
-      "id": "remove_horizontal_spacing",
-      "label": "Remove horizontal spacing",
-      "default": false
+      "type": "select",
+      "id": "visibility",
+      "options": [
+        {
+          "value": "desktop-hidden",
+          "label": "Mobile only"
+        },
+        {
+          "value": "mobile-hidden",
+          "label": "Desktop only"
+        },
+        {
+          "value": "always-display",
+          "label": "All devices"
+        }
+      ],
+      "label": "Display on",
+      "default": "always-display"
     },
     {
       "type": "liquid",
-      "id": "liquid",
-      "label": "Liquid",
-      "info": "Add app snippets or other Liquid code to create advanced customizations.",
-      "default": "<p style=\"text-align: center\">Write or copy/paste Liquid code</p>"
+      "id": "custom_liquid",
+      "label": "t:sections.custom-liquid.settings.custom_liquid.label",
+      "info": "t:sections.custom-liquid.settings.custom_liquid.info"
+    },
+    {
+      "type": "select",
+      "id": "color_scheme",
+      "options": [
+        {
+          "value": "accent-1",
+          "label": "t:sections.all.colors.accent_1.label"
+        },
+        {
+          "value": "accent-2",
+          "label": "t:sections.all.colors.accent_2.label"
+        },
+        {
+          "value": "background-1",
+          "label": "t:sections.all.colors.background_1.label"
+        },
+        {
+          "value": "background-2",
+          "label": "t:sections.all.colors.background_2.label"
+        },
+        {
+          "value": "inverse",
+          "label": "t:sections.all.colors.inverse.label"
+        }
+      ],
+      "default": "background-1",
+      "label": "t:sections.all.colors.label"
     },
     {
       "type": "header",
-      "content": "Colors",
-      "info": "Gradient replaces solid colors when set."
+      "content": "t:sections.all.padding.section_padding_heading"
     },
     {
-      "type": "color",
-      "id": "background",
-      "label": "Background"
+      "type": "range",
+      "id": "padding_top",
+      "min": 0,
+      "max": 100,
+      "step": 4,
+      "unit": "px",
+      "label": "t:sections.all.padding.padding_top",
+      "default": 40
     },
     {
-      "type": "color_background",
-      "id": "background_gradient",
-      "label": "Background gradient"
-    },
-    {
-      "type": "color",
-      "id": "text_color",
-      "label": "Text"
+      "type": "range",
+      "id": "padding_bottom",
+      "min": 0,
+      "max": 100,
+      "step": 4,
+      "unit": "px",
+      "label": "t:sections.all.padding.padding_bottom",
+      "default": 52
     }
   ],
   "presets": [
     {
-      "name": "Custom Liquid"
+      "name": "t:sections.custom-liquid.presets.name"
     }
   ]
 }
