--- a/sections/logo-list.liquid
+++ b/sections/logo-list.liquid
@@ -1,174 +1,331 @@
-{%- if section.blocks.size > 0 -%}
-  {%- render 'section-spacing-collapsing' -%}
+{%- style -%}
+  .section-{{ section.id }}-padding {
+    padding-top: {{ section.settings.padding_top | times: 0.75 | round: 0 }}px;
+    padding-bottom: {{ section.settings.padding_bottom | times: 0.75 | round: 0 }}px;
+  }
 
-  <style>
-    #shopify-section-{{ section.id }} {
-      --logo-list-item-max-size: 280px;
-      --logo-list-grid: {% if section.settings.stack_mobile %}auto-flow 1fr / repeat(var(--logo-list-items-per-row), minmax(0, var(--logo-list-item-max-size))){% else %}1fr / auto-flow 52vw{% endif %};
-      --logo-list-items-per-row: {{ 2 | at_most : section.blocks.size }};
-      --logo-list-items-border: {{ section.settings.logo_item_border.rgb }} / {{ section.settings.logo_item_border.alpha }};
+  @media screen and (min-width: 750px) {
+    .section-{{ section.id }}-padding {
+      padding-top: {{ section.settings.padding_top }}px;
+      padding-bottom: {{ section.settings.padding_bottom }}px;
     }
 
-    @media screen and (min-width: 700px) {
-      #shopify-section-{{ section.id }} {
-        --logo-list-grid: auto-flow 1fr / repeat(var(--logo-list-items-per-row), minmax(0, var(--logo-list-item-max-size)));
-        --logo-list-items-per-row: {{ 3 | at_most : section.blocks.size }};
-      }
+    .logo-list-{{ section.id }} .logo-list__item svg, .logo-list-{{ section.id }} .logo-list__item, .logo-list-{{ section.id }} .logo-list__item img {
+      height: {{ section.settings.desktop_logo_height }}px;
     }
+  }
 
-    @media screen and (min-width: 1000px) {
-      #shopify-section-{{ section.id }} {
-        --logo-list-items-per-row: {{ 4 | at_most: section.settings.items_per_row | at_most: section.blocks.size }};
-      }
+  @media screen and (max-width: 749px) {
+    .logo-list-{{ section.id }} .logo-list__item svg, .logo-list-{{ section.id }} .logo-list__item, .logo-list-{{ section.id }} .logo-list__item img {
+      height: {{ section.settings.mobile_logo_height }}px;
     }
+  }
 
-    @media screen and (min-width: 1150px) {
-      #shopify-section-{{ section.id }} {
-        --logo-list-items-per-row: {{ section.settings.items_per_row | at_most: section.blocks.size }};
-      }
-    }
-  </style>
+  .color-scheme-{{ section.id }}.color-custom {
+    --color-background: {{ section.settings.custom_colors_background.red }}, {{ section.settings.custom_colors_background.green }}, {{ section.settings.custom_colors_background.blue }};
+    --gradient-background: {% if section.settings.custom_gradient_background != blank %}{{ section.settings.custom_gradient_background }}{% else %}{{ section.settings.custom_colors_background }}{% endif %};
+    --color-foreground: {{ section.settings.custom_colors_text.red }}, {{ section.settings.custom_colors_text.green }}, {{ section.settings.custom_colors_text.blue }};
+  }
+{%- endstyle -%}
 
-  <div {% render 'section-properties' %}>
-    <div class="section-stack {% if section.settings.text_alignment == 'center' %}sm:justify-items-center{% endif %}">
-      <div class="prose {% if section.settings.text_alignment == 'center' %}text-center{% endif %}">
-        {%- if section.settings.title != blank -%}
-          <h2 class="h2">
-            {%- render 'styled-text', content: section.settings.title, text_color: section.settings.heading_color, gradient: section.settings.heading_gradient -%}
+<div class="color-scheme-{{ section.id }} color-{{ section.settings.color_scheme }} gradient content-for-grouping animate-section animate--hidden {{ section.settings.visibility }}">
+  {% if section.settings.display_id %}
+    <copy-button class='section-id-btn button' data-content="#shopify-section-{{ section.id }}" data-success="false">
+      <span class="copy-text">Click to copy section ID</span>
+      <span class="copy-success">ID copied successfully!</span>
+    </copy-button>
+  {% endif %}
+  <div class="logo-list-{{ section.id }} page-width section-{{ section.id }}-padding">
+    <div class="logo-list-container logo-list-container-{{ section.settings.layout }}" style='--columns-mobile:{{ section.settings.columns_mobile }};'>
+      {% assign content_index = 0 %}
+      {% if section.settings.title != blank %}
+        {% assign content_index = 1 %}
+        <div class="logo-list__heading animate-item animate-item--child index-0">
+          <h2 class="title {{ section.settings.heading_size }} title-with-highlight" style='--hightlight-color:{{ section.settings.title_highlight_color }}'>
+            {{ section.settings.title }}
           </h2>
-        {%- endif -%}
-
-        {{- section.settings.content -}}
-      </div>
-
-      <reveal-items class="logo-list {% unless section.settings.stack_mobile %}scroll-area bleed sm:unbleed{% endunless %}">
-        {%- for block in section.blocks -%}
-          {%- capture block_content -%}
-            {%- if block.settings.logo != blank -%}
-              {%- capture sizes -%}{{ block.settings.logo_width }}px{%- endcapture -%}
-              {%- capture widths -%}{{ block.settings.logo_width }}, {{ block.settings.logo_width | times: 2 | at_most: block.settings.logo.width }}{%- endcapture -%}
-              {%- capture max_width -%}--logo-list-image-max-width: {{ block.settings.logo_width }}px{%- endcapture -%}
-              {{- block.settings.logo | image_url: width: block.settings.logo.width | image_tag: style: max_width, loading: 'lazy', widths: widths, class: 'logo-list__image', sizes: sizes -}}
-            {%- else -%}
-              {{- 'image' | placeholder_svg_tag: 'logo-list__image' -}}
-            {%- endif -%}
-          {%- endcapture -%}
-
-          {% capture item_attribute %}
-           {%- render 'surface', class: 'logo-list__item', background: section.settings.logo_item_background, background_fallback: 'bg-secondary' -%}
-          {%- endcapture -%}
-
-          {%- if block.settings.link != blank -%}
-            <a href="{{ block.settings.link }}" {{ item_attribute }} {{ block.shopify_attributes }}>
-              {{- block_content -}}
-            </a>
-          {%- else -%}
-            <div {{ item_attribute }} {{ block.shopify_attributes }}>
-              {{- block_content -}}
-            </div>
-          {%- endif -%}
-        {%- endfor -%}
-      </reveal-items>
+        </div>
+      {% endif %}
+      {% if section.settings.mobile_slider %}
+        <splide-component
+          data-type='loop'
+          data-autoplay='{{ section.settings.autoplay }}'
+          data-autoplay-speed='{{ section.settings.autoplay_speed }}'
+          data-slides-mobile="{{ section.settings.columns_mobile }}"
+          data-gap-mobile='0px'
+          data-arrows='false'
+          data-pagination='{{ section.settings.show_dots }}'
+          data-destroy-desktop="true"
+        >
+      {% endif %}
+        <div class="splide splide--mobile-dots-under desktop-destroy--flex">
+          <div class="splide__track">
+            <ul class="splide__list{% if section.settings.mobile_slider == false %} mobile-logo-list--grid{% endif %}">
+              {% for block in section.blocks %}
+                <li class="splide__slide">
+                  <div class="splide__slide__container">
+                    <{% if block.settings.link != blank %}a href="{{ block.settings.link }}" {% if block.settings.target_blank %}target="_blank" rel="noreferrer"{% endif %} {% else %}div{% endif %} class="logo-list__item{% if section.settings.gray_logos %} logo-list__item--gray{% endif %} animate-item animate-item--child" style="--index:{{ forloop.index0 | plus: content_index }};">
+                      {% if block.settings.image != blank %}
+                        <img
+                          src="{{ block.settings.image | image_url }}"
+                          {% if block.settings.image.alt != blank %}
+                            alt="{{ block.settings.image.alt | escape }}"
+                          {% else %}
+                            role="presentation"
+                          {% endif %}
+                          height="auto"
+                          width="auto"
+                          loading="lazy"
+                        >
+                      {% else %}
+                        {{ 'image' | placeholder_svg_tag: 'placeholder-svg placeholder' }}
+                      {% endif %}
+                    </{%- if block.settings.link != blank -%}a{% else %}div{%- endif -%}>
+                  </div>
+                </li>
+              {% endfor %}
+            </ul>
+          </div>
+        </div>
+      {% if section.settings.mobile_slider %}
+        </splide-component>
+      {% endif %}
     </div>
   </div>
-{%- endif -%}
+</div>
 
 {% schema %}
 {
-  "name": "Logo list",
-  "class": "shopify-section--logo-list",
-  "tag": "section",
-  "disabled_on": {
-    "templates": ["password"],
-    "groups": ["header", "custom.overlay"]
-  },
+  "name": "Featured on",
   "settings": [
     {
       "type": "checkbox",
-      "id": "full_width",
-      "label": "Full width",
-      "default": true
-    },
-    {
-      "type": "checkbox",
-      "id": "stack_mobile",
-      "label": "Stack on mobile",
-      "default": true
-    },
-    {
-      "type": "text",
-      "id": "title",
-      "label": "Heading",
-      "default": "Logo list"
-    },
-    {
-      "type": "richtext",
-      "id": "content",
-      "label": "Content"
+      "id": "display_id",
+      "label": "Display section ID",
+      "info": "ID is used in the Sections group section to merge 2 sections. ID can also be put inside any button link and the button will scroll to this section.",
+      "default": false
     },
     {
       "type": "select",
-      "id": "text_alignment",
-      "label": "Text alignment",
+      "id": "visibility",
       "options": [
         {
-          "value": "start",
-          "label": "Left"
+          "value": "desktop-hidden",
+          "label": "Mobile only"
         },
         {
-          "value": "center",
-          "label": "Center"
+          "value": "mobile-hidden",
+          "label": "Desktop only"
+        },
+        {
+          "value": "always-display",
+          "label": "All devices"
         }
       ],
-      "default": "start"
+      "label": "Display on",
+      "default": "always-display"
     },
     {
-      "type": "range",
-      "id": "items_per_row",
-      "min": 3,
-      "max": 7,
-      "label": "Items per row (desktop)",
-      "default": 5
+      "type": "inline_richtext",
+      "id": "title",
+      "default": "Featured on",
+      "label": "Heading",
+      "info": "Bold certain words to highlight them with a different color."
+    },
+    {
+      "type": "color",
+      "id": "title_highlight_color",
+      "label": "Heading highlight color",
+      "default": "#6D388B"
+    },
+    {
+      "type": "select",
+      "id": "heading_size",
+      "options": [
+        {
+          "value": "h2",
+          "label": "Small"
+        },
+        {
+          "value": "h1",
+          "label": "Medium"
+        },
+        {
+          "value": "h0",
+          "label": "Large"
+        }
+      ],
+      "default": "h1",
+      "label": "Heading size"
+    },
+    {
+      "type": "checkbox",
+      "id": "gray_logos",
+      "label": "Gray logos",
+      "default": false
+    },
+    {
+      "type": "select",
+      "id": "color_scheme",
+      "options": [
+        {
+          "value": "accent-1",
+          "label": "Accent 1"
+        },
+        {
+          "value": "accent-2",
+          "label": "Accent 2"
+        },
+        {
+          "value": "background-1",
+          "label": "Background 1"
+        },
+        {
+          "value": "background-2",
+          "label": "Background 2"
+        },
+        {
+          "value": "inverse",
+          "label": "Inverse"
+        },
+        {
+          "value": "custom",
+          "label": "Custom"
+        }
+      ],
+      "default": "background-1",
+      "label": "Color scheme",
+      "info": "Custom color scheme is edited at the bottom of section settings."
     },
     {
       "type": "header",
-      "content": "Colors",
-      "info": "Gradient replaces solid colors when set."
+      "content": "Desktop"
+    },
+    {
+      "type": "select",
+      "id": "layout",
+      "options": [
+        {
+          "value": "vertical",
+          "label": "Vertical"
+        },
+        {
+          "value": "horizontal",
+          "label": "Horizontal"
+        }
+      ],
+      "default": "horizontal",
+      "label": "Desktop layout"
+    },
+    { 
+      "type": "range",
+      "id": "desktop_logo_height",
+      "min": 30,
+      "max": 150,
+      "step": 10,
+      "default": 50,
+      "label": "Desktop logo height"
+    },
+    {
+      "type": "header",
+      "content": "Mobile"
+    },
+    {
+      "type": "range",
+      "id": "columns_mobile",
+      "min": 1,
+      "max": 4,
+      "step": 1,
+      "default": 2,
+      "label": "t:sections.multicolumn.settings.columns_mobile.label"
+    },
+    {
+      "type": "range",
+      "id": "mobile_logo_height",
+      "min": 30,
+      "max": 150,
+      "step": 10,
+      "default": 50,
+      "label": "Mobile logo height"
+    },
+    {
+      "type": "paragraph",
+      "content": "ATTENTION: ONLY in the theme editor, pagination dots might duplicate after changing section settings. To overcome this, simply click Save. This has NO EFFECT on the published website."
+    },
+    {
+      "type": "checkbox",
+      "id": "mobile_slider",
+      "default": true,
+      "label": "Enable mobile slider"
+    },
+    {
+      "type": "checkbox",
+      "id": "autoplay",
+      "label": "Autoplay",
+      "default": true
+    },
+    {
+      "type": "range",
+      "id": "autoplay_speed",
+      "min": 1,
+      "max": 15,
+      "step": 0.5,
+      "default": 5,
+      "unit": "sec",
+      "label": "Autoplay speed"
+    },
+    {
+      "type": "checkbox",
+      "id": "show_dots",
+      "label": "Show dots",
+      "default": true
+    },
+    {
+      "type": "header",
+      "content": "t:sections.all.padding.section_padding_heading"
+    },
+    {
+      "type": "range",
+      "id": "padding_top",
+      "min": 0,
+      "max": 100,
+      "step": 4,
+      "unit": "px",
+      "label": "t:sections.all.padding.padding_top",
+      "default": 36
+    },
+    {
+      "type": "range",
+      "id": "padding_bottom",
+      "min": 0,
+      "max": 100,
+      "step": 4,
+      "unit": "px",
+      "label": "t:sections.all.padding.padding_bottom",
+      "default": 36
+    },
+    {
+      "type": "header",
+      "content": "Custom color scheme",
+      "info": "Applied if Color scheme setting is set to Custom."
     },
     {
       "type": "color",
-      "id": "background",
-      "label": "Background"
+      "id": "custom_colors_background",
+      "default": "#FFFFFF",
+      "label": "Background color"
     },
     {
       "type": "color_background",
-      "id": "background_gradient",
-      "label": "Background gradient"
+      "id": "custom_gradient_background",
+      "label": "Gradient background",
+      "info": "If added, replaces Background color when applicable."
     },
     {
       "type": "color",
-      "id": "text_color",
+      "id": "custom_colors_text",
+      "default": "#121212",
       "label": "Text"
-    },
-    {
-      "type": "color",
-      "id": "heading_color",
-      "label": "Heading color"
-    },
-    {
-      "type": "color_background",
-      "id": "heading_gradient",
-      "label": "Heading gradient"
-    },
-    {
-      "type": "color",
-      "id": "logo_item_background",
-      "label": "Logo background"
-    },
-    {
-      "type": "color",
-      "id": "logo_item_border",
-      "label": "Logo border"
     }
   ],
   "blocks": [
@@ -178,31 +335,26 @@
       "settings": [
         {
           "type": "image_picker",
-          "id": "logo",
-          "label": "Logo",
-          "info": "300 x 90px .jpg recommended"
-        },
-        {
-          "type": "range",
-          "id": "logo_width",
-          "min": 50,
-          "max": 300,
-          "unit": "px",
-          "step": 10,
-          "label": "Logo width",
-          "default": 120
+          "id": "image",
+          "label": "Logo"
         },
         {
           "type": "url",
           "id": "link",
           "label": "Link"
+        },
+        {
+          "type": "checkbox",
+          "id": "target_blank",
+          "label": "Open link in a new tab",
+          "default": false
         }
       ]
     }
   ],
   "presets": [
     {
-      "name": "Logo list",
+      "name": "Featured on",
       "blocks": [
         {
           "type": "logo"
@@ -212,15 +364,13 @@
         },
         {
           "type": "logo"
-        },
-        {
-          "type": "logo"
-        },
-        {
-          "type": "logo"
         }
       ]
     }
-  ]
+  ],
+  "disabled_on": {
+    "groups": ["header", "footer"]
+  }
 }
 {% endschema %}
+
