--- a/sections/ss-glow-testimonial.liquid
+++ b/sections/ss-glow-testimonial.liquid
@@ -1,13 +1,3 @@
-{% comment %}
----------------------------------------------------------
-Copyright 'a9 2023 Section Store. All rights reserved.
-Unauthorized copying, modification, distribution, or use
-of this code or any portion of it, is strictly prohibited.
-Violators will be prosecuted to the fullest extent of the law.
-For inquiries or permissions, contact daniel@section.store
----------------------------------------------------------
-{% endcomment %}
-
 <div class="{{ section.id }}"style="background-color:{{section.settings.background-color}};">
  <div class="section-{{ section.id }}-padding">
   <div class="reviews">
@@ -446,6 +436,24 @@ For inquiries or permissions, contact daniel@section.store
       {
         "name": "SS - Glow Testimonial",
         "blocks": [
+          {
+            "type": "Image"
+          },
+          {
+            "type": "Image"
+          },
+          {
+            "type": "Image"
+          },
+          {
+            "type": "Image"
+          },
+          {
+            "type": "Image"
+          },
+          {
+            "type": "Image"
+          },
           {
             "type": "Image"
           },
